# tetris

./: Cargo.toml  README.md  shell.nix  tetris.d.ts  tetris.js  tetris_bg.wasm.d.ts
.github/workflows/: ci.yaml
src/: main.rs
src/common/: mod.rs  plugin.rs  resources.rs
src/game_rules/: components.rs  events.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/plugins/: game_rules.rs  game_window.rs  mod.rs
src/tests/: mod.rs
src/ui_controls/: mod.rs  plugin.rs  resources.rs  systems.rs
src/ui_grid/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/ui_side/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
web/: index.html
