[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-map = "2.7"
rand = "0.8"

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_animation",
    "bevy_color",
    "bevy_dev_tools",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "wayland",
    "x11",
]
