[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop", "web"]
desktop = ["bevy/wayland", "bevy/x11"]
web = ["bevy/webgl2", "bevy/bevy_winit"]

[dependencies]
enum-map = "2.7"
log = { version = "0.4", features = ["release_max_level_warn"] }
rand = "0.8"

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_animation",
    "bevy_color",
    "bevy_dev_tools",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = true
